Give each generator level its own alias, and fix three small faults
The generator names its own query levels 'g' (derived), 'g' (window) and
'w' (rank) -- the first two being the same string, and allocateAliases
reserving only one of the three. So a Wires table was handed 'w' and
ended up nested inside the rank level of the same name, and a windowed
query over a parameterised group key emitted ') AS g' inside ') AS g'.
Both are legal, because the scopes never overlap, but only by accident,
and both are unreadable in a plan someone is debugging. The window level
is now 'q' and all three names are reserved before any table is named.

SqlFailure.classify carried a 'fallback' that could only ever hold
UNKNOWN, so the branch tracking it did nothing.

Retry backoff had no jitter: every caller that lost the same deadlock
slept the identical doubling interval and collided again on each wake-up,
which is most of the value of backing off. Half the interval is fixed and
half random, so there is still a floor under the wait. The shift is
capped so a generous maxAttempts cannot overflow into a negative delay.

Plan.variables() used Map.copyOf, whose iteration order is randomised per
JVM -- the resolver builds it insertion-ordered and both copies threw that
away. The map is published as the endpoint's contract, so a generated
schema reordered its own properties on every restart. Verified by running
Main three times: the variable list came back in three different orders
before, one order after. The test asserts the order rather than its
stability, because two calls in one JVM agree even when it is randomised.

Also removes a dead local in analysisWithWindows.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019SfBohpFjcGLsa4GHaHrhs